; ModuleID = '/home/carl/AnghaBench/linux/drivers/acpi/extr_processor_driver.c_acpi_soft_cpu_dead.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/acpi/extr_processor_driver.c_acpi_soft_cpu_dead.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.acpi_processor = type { i32 }
%struct.acpi_device = type { i32 }

@processors = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @acpi_soft_cpu_dead to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @acpi_soft_cpu_dead(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca %struct.acpi_processor*, align 8
  %5 = alloca %struct.acpi_device*, align 8
  store i32 %0, i32* %3, align 4
  %6 = load i32, i32* @processors, align 4
  %7 = load i32, i32* %3, align 4
  %8 = call %struct.acpi_processor* @per_cpu(i32 %6, i32 %7)
  store %struct.acpi_processor* %8, %struct.acpi_processor** %4, align 8
  %9 = load %struct.acpi_processor*, %struct.acpi_processor** %4, align 8
  %10 = icmp ne %struct.acpi_processor* %9, null
  br i1 %10, label %11, label %17

11:                                               ; preds = %1
  %12 = load %struct.acpi_processor*, %struct.acpi_processor** %4, align 8
  %13 = getelementptr inbounds %struct.acpi_processor, %struct.acpi_processor* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i64 @acpi_bus_get_device(i32 %14, %struct.acpi_device** %5)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %18

17:                                               ; preds = %11, %1
  store i32 0, i32* %2, align 4
  br label %21

18:                                               ; preds = %11
  %19 = load %struct.acpi_processor*, %struct.acpi_processor** %4, align 8
  %20 = call i32 @acpi_processor_reevaluate_tstate(%struct.acpi_processor* %19, i32 1)
  store i32 0, i32* %2, align 4
  br label %21

21:                                               ; preds = %18, %17
  %22 = load i32, i32* %2, align 4
  ret i32 %22
}

declare dso_local %struct.acpi_processor* @per_cpu(i32, i32) #1

declare dso_local i64 @acpi_bus_get_device(i32, %struct.acpi_device**) #1

declare dso_local i32 @acpi_processor_reevaluate_tstate(%struct.acpi_processor*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
